--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -9,4 +9,7 @@ textColor = "#FFFFFF"
 font = "monospace"  
 
 [server]
-baseUrlPath = "/958a37ea-e8bc-4691-81bc-6322c6c39b9e/port/8501/"
+headless = true
+enableCORS = false
+enableXsrfProtection = false
+
